src/objects/Cancellation_References__c.object
<CustomObject>
    <fields>
        <fullName>Cancellation_Intimation__c</fullName>
        <label>Cancellation Intimation</label>
        <referenceTo>Cancellation_Intimation__c</referenceTo>
        <relationshipLabel>Cancellation References</relationshipLabel>
        <relationshipName>Cancellation_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Demand_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demand Invoice</label>
        <referenceTo>Demand_Invoice__c</referenceTo>
        <relationshipLabel>Cancellation References</relationshipLabel>
        <relationshipName>Cancellation_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flat_Cost_Outstanding__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Flat Cost Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Oustanding__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax Oustanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Flat_Cost_Outstanding__c +  Service_Tax_Oustanding__c +  Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cancellation Reference</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Cancellation Demands Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellation References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>